balance management first commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TheGreenMagpie</string>
+    <string name="title_activity_balance_management">BalanceManagement</string>
 </resources>
