--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">TheGreenMagpie</string>
     <string name="title_activity_balance_management">BalanceManagement</string>
+    <string name="explanation">NFC is enabled on the device</string>
+    <string name="nfcReadOnlyErrorTitle">Read Only Error</string>
+    <string name="nfcReadOnlyError">The NFC tag is not writable</string>
 </resources>
