--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
     <string name="app_name">TheGreenMagpie</string>
     <string name="title_activity_balance_management">BalanceManagement</string>
+    <string name="title_activity_buyer_connection">BuyerConnection</string>
+    <string name="paypal_email">Paypal email address</string>
+    <string name="buyer_auto_connect">Autoconnect with this email next time</string>
+    <string name="seller_button">Seller</string>
     <string name="explanation">NFC is enabled on the device</string>
     <string name="nfcReadOnlyErrorTitle">Read Only Error</string>
     <string name="nfcReadOnlyError">The NFC tag is not writable</string>
+    <string name="go_button">GO!</string>
+    <string name="magpie_logo_description">The magpie logo of this application</string>
 </resources>
