--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="seller_transaction_initiation_amount">Type the amount</string>
     <string name="seller_transaction_initiation_nfc">Your NFC is activated</string>
     <string name="seller_waiting_transaction_text">Awaiting for NFC connection</string>
+    <string name="seller_writing_transaction_text">Sending NFC message..</string>
+    <string name="seller_transaction_done_text">NFC message sent</string>
     <string name="buyer_button">Client</string>
     <string name="buyer_auto_connect">Autoconnect with this email next time</string>
     <string name="buyer_manage_balance_button">Manage balance</string>
