--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="settings_text">Settings</string>
     <string name="return_text">Return</string>
     <string name="cancel_text">Cancel</string>
+    <string name="transaction_details_title">Transaction Details</string>
 </resources>
